--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "jest --detectOpenHandles --coverage",
     "test:watch": "jest --watchAll --detectOpenHandles",
     "lint": "eslint src/**/*.ts",
-    "lint:format": "eslint src/**/*.ts --fix"
+    "lint:format": "eslint src/**/*.ts --fix",
+    "prisma:migerate": "prisma migrate dev"
   },
   "keywords": [],
   "author": "",
@@ -32,10 +33,12 @@
     "jest": "^28.1.2",
     "nodemon": "^2.0.19",
     "prettier": "2.7.1",
+    "prisma": "^4.0.0",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.0.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
