--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@prisma/client": "^4.0.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-promise-router": "^4.1.1",
     "helmet": "^5.1.0",
