--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
-  "compilerOptions": {    
-    "outDir": "dist",
+	"compilerOptions": {
+		"outDir": "dist",
 		"target": "ESNext",
 		"module": "CommonJS",
 		"moduleResolution": "node",
@@ -12,10 +12,11 @@
 		"removeComments": true,
 		"noEmitOnError": true,
 		"alwaysStrict": false,
-		"noImplicitAny": false,                      
-    "strict": true,                                
-    "skipLibCheck": true,                           
-    "forceConsistentCasingInFileNames": true        
-  },
-  "exclude": ["node_modules", "dist","tests", "**/*.spec.ts"],
+		"noImplicitAny": true,
+		"strict": true,
+		"skipLibCheck": true,
+		"forceConsistentCasingInFileNames": true,
+	},
+	"files": ["src/types/types.d.ts"],
+	"exclude": ["node_modules", "dist", "tests", "**/*.spec.ts"],
 }
