--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.3",
+    "@types/node-fetch": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.0.1",
@@ -33,6 +34,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^28.1.2",
+    "localtunnel": "^2.0.2",
     "nodemon": "^2.0.19",
     "prettier": "2.7.1",
     "prisma": "^4.0.0",
@@ -50,6 +52,6 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "node-fetch": "^3.2.8"
+    "node-fetch": "2.6.5"
   }
 }
