--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^28.1.2",
-    "localtunnel": "^2.0.2",
+    "ngrok": "^4.3.1",
     "nodemon": "^2.0.19",
     "prettier": "2.7.1",
     "prisma": "^4.0.0",
