--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "node-fetch": "2.6.5"
+    "node-fetch": "2.6.5",
+    "winston": "^3.8.1"
   }
 }
