--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:watch": "jest --watchAll --detectOpenHandles",
     "lint": "eslint src/**/*.ts",
     "lint:format": "eslint src/**/*.ts --fix",
-    "prisma:migerate": "prisma migrate dev",
+    "prisma:migrate": "prisma migrate dev",
     "serve": "yarn ngrok http"
   },
   "keywords": [],
