--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compilerOptions": {
-		"outDir": "dist",
+		"outDir": "./dist",
+		"rootDir": "./src",
 		"target": "ESNext",
 		"module": "CommonJS",
 		"moduleResolution": "node",
@@ -18,5 +19,6 @@
 		"forceConsistentCasingInFileNames": true,
 	},
 	"files": ["src/types/types.d.ts"],
-	"exclude": ["node_modules", "dist", "tests", "**/*.spec.ts"],
+	"exclude": ["node_modules", "tests"], 
+	"include": ["src"]
 }
