auth middleware test starter

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc -p .",
     "build:watch": "tsc --watch",
     "clean": "rm -rf dist",
-    "test": "jest --detectOpenHandles",
+    "test": "jest i --detectOpenHandles",
     "test:watch": "jest --watchAll --detectOpenHandles",
     "lint": "eslint src/**/*.ts",
     "lint:format": "eslint src/**/*.ts --fix",
@@ -40,6 +40,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^28.1.2",
+    "jest-mock-extended": "2.0.4",
     "ngrok": "^4.3.1",
     "nodemon": "^2.0.19",
     "prettier": "2.7.1",
